--- a/css/site.css
+++ b/css/site.css
@@ -29,10 +29,26 @@ footer .social>a{
     color: var(--white-color);
     opacity: 0.75;
 }
-
+    
 footer .social>a:hover{
     opacity:0.9;
     color: var(--primary-color);    
+}
+
+.bsicon{
+    color: purple;
+}
+
+.jsicon{
+    color: rgb(220, 220, 0);
+}
+
+.html5icon{
+    color: orangered;
+}
+
+.css3icon{
+    color: rgb(11,82,214);
 }
 
 main>.container {
