--- a/css/site.css
+++ b/css/site.css
@@ -29,7 +29,7 @@ footer .social>a{
     color: var(--white-color);
     opacity: 0.75;
 }
-    
+
 footer .social>a:hover{
     opacity:0.9;
     color: var(--primary-color);    
@@ -49,6 +49,10 @@ footer .social>a:hover{
 
 .css3icon{
     color: rgb(11,82,214);
+}
+
+.checklist >li i{
+    color: var(--secondary-color);
 }
 
 main>.container {
